Acrescentado u arquivo CSS e adicionado conteudo no arquivo Index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
                 <title>Média Aritmética</title>
 </head>
 <body>
-                
+              <h1>Média Aritmética</h1>  
+              <p>
+                A média aritmética é considerada uma medida de tendência central e é muito utilizada no cotidiano.
+                Surge do resultado da divisão do somatório dos números dados pela quantidade de números somados.
+             </p>
+              <p>
+                Esse tipo de cálculo é muito utilizado em campeonatos de futebol no intuito de determinar a <strong>média</strong> de goal de uma rodada, nas escolas, para o cálculo da <strong>média final<strong> dos alunos, nas pesquisas estatísticas, pois a média dos resultados determina o direcionamento das ideias expressas pelas pessoas pesquizadas etc.
+              </p>               
 </body>
 </html>
