--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Média Aritmética</title>
+                <link rel="stylesheet" href="style.css">
 </head>
 <body>
-              <h1>Média Aritmética</h1>  
-              <p>
-                A média aritmética é considerada uma medida de tendência central e é muito utilizada no cotidiano.
-                Surge do resultado da divisão do somatório dos números dados pela quantidade de números somados.
-             </p>
-              <p>
-                Esse tipo de cálculo é muito utilizado em campeonatos de futebol no intuito de determinar a <strong>média</strong> de goal de uma rodada, nas escolas, para o cálculo da <strong>média final<strong> dos alunos, nas pesquisas estatísticas, pois a média dos resultados determina o direcionamento das ideias expressas pelas pessoas pesquizadas etc.
-              </p>               
+     <main>
+                 <h1>Média Aritmética</h1>  
+                 <p>
+                 A média aritmética é considerada uma medida de tendência central e é muito utilizada no cotidiano.
+                 Surge do resultado da divisão do somatório dos números dados pela quantidade de números somados.
+                </p>
+                 <p>
+                  Esse tipo de cálculo é muito utilizado em campeonatos de futebol no intuito de determinar a <strong>média</strong> de goal de uma rodada, nas escolas, para o cálculo da <strong>média final</strong> dos alunos, nas pesquisas estatísticas, pois a <strong>média</strong> dos resultados determina o direcionamento das ideias expressas pelas pessoas pesquizadas etc.
+                 </p>
+                 <section>
+                   <h2>Usando um exemplo</h2>
+                   <p>Vamos calcular a média aritmética anual das notas bimestrais do aluno Zé Jacaré, de matemática.</p>             
+                 </section>
+     </main>               
 </body>
 </html>
