--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
      <main>
-                 <h1>Média Aritmética</h1>  
-                 <p>
+        <article>
+
+                <h1>Média Aritmética</h1>  
+                 <p class="texto">
                  A média aritmética é considerada uma medida de tendência central e é muito utilizada no cotidiano.
                  Surge do resultado da divisão do somatório dos números dados pela quantidade de números somados.
                 </p>
-                 <p>
+                 <p class="texto">
                   Esse tipo de cálculo é muito utilizado em campeonatos de futebol no intuito de determinar a <strong>média</strong> de goal de uma rodada, nas escolas, para o cálculo da <strong>média final</strong> dos alunos, nas pesquisas estatísticas, pois a <strong>média</strong> dos resultados determina o direcionamento das ideias expressas pelas pessoas pesquizadas etc.
                  </p>
-                 <section>
-                   <h2>Usando um exemplo</h2>
-                   <p>Vamos calcular a média aritmética anual das notas bimestrais do aluno Zé Jacaré, de matemática.</p>             
-                 </section>
+                 <h2>Usando um exemplo</h2>
+                   <p class="texto">Vamos calcular a média aritmética anual das notas bimestrais do aluno Zé Jacaré, de matemática.</p>
+        </article>
+                 <div id="calculo">
+                                
+                 </div>
      </main>               
 </body>
 </html>
