--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <script src="interacao.js"></script>
      <main>
         <article>
 
@@ -23,8 +24,9 @@
                    <p class="texto">Vamos calcular a média aritmética anual das notas bimestrais do aluno Zé Jacaré, de matemática.</p>
         </article>
                  <div id="calculo">
-                                
+                              <p>Se a média do Zé Jacaré ficar abaixo de 60 ele será reprovado, se ficar entre 60 e 100 estará aprovado!</p>
                  </div>
+                 
      </main>               
 </body>
 </html>
