Logo acrescentando os comandos JS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
         </article>
                  <div id="calculo">
                               <p>Se a média do Zé Jacaré ficar abaixo de 60 ele será reprovado, se ficar entre 60 e 100 estará aprovado!</p>
+                              <div id="notasbimestrais">
+                              <label for="">1° Bimestre</label>
+                              <input id="nota1" class="notas" type="number">
+                              <label for="">2° Bimestre</label>
+                              <input id="nota2" class="notas" type="number">
+                              <label for="">3° Bimestre</label>
+                              <input id="nota3" class="notas" type="number">
+                              <label for="">4° Bimestre</label>
+                              <input id="nota4" class="notas" type="number">
+                              </div>
                  </div>
+                
                  
      </main>               
 </body>
