--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                    <p class="texto">Vamos calcular a média aritmética anual das notas bimestrais do aluno Zé Jacaré, de matemática.</p>
         </article>
                  <div id="calculo">
-                              <p>Se a média do Zé Jacaré ficar abaixo de 60 ele será reprovado, se ficar entre 60 e 100 estará aprovado!</p>
+                              <p>Se a média do Zé Jacaré ficar abaixo de 60 ele será reprovado, se ficar entre 60 e 100 estará aprovado! Simule notas de 0 a 100 para todos os bimestres.</p>
                               <div id="notasbimestrais">
                               <label for="">1° Bimestre</label>
                               <input id="nota1" class="notas" type="number">
@@ -34,8 +34,10 @@
                               <input id="nota3" class="notas" type="number">
                               <label for="">4° Bimestre</label>
                               <input id="nota4" class="notas" type="number">
+                              <button>Calcular</button>
                               </div>
                  </div>
+                 <div id="resultado"></div>
                 
                  
      </main>               
