--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                               <input id="nota3" class="notas" type="number">
                               <label for="">4° Bimestre</label>
                               <input id="nota4" class="notas" type="number">
-                              <button  id="botao" onclick ="calcular()">Calcular</button>
+                              <button onclick="calcular()">Calcular</button>
                               </div>
                  </div>
                  <div id="resultado"></div>
