Realizada algumas configuracoes

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                  <p class="texto">
                   Esse tipo de cálculo é muito utilizado em campeonatos de futebol no intuito de determinar a <strong>média</strong> de goal de uma rodada, nas escolas, para o cálculo da <strong>média final</strong> dos alunos, nas pesquisas estatísticas, pois a <strong>média</strong> dos resultados determina o direcionamento das ideias expressas pelas pessoas pesquizadas etc.
                  </p>
-                 <img id="imagem-formula" src="Imagens/formulaMA.jpg" alt="">
+                 <img id="imagem-formula" src="Imagens/formulaMA.jpg" alt="fórmulaMA">
                  <h2>Usando um exemplo</h2>
                    <p class="texto">Vamos calcular a média aritmética anual das notas bimestrais do aluno Zé Jacaré, de matemática.</p>
                  <div id="calculo">
                               <p class="texto">Se a média do Zé Jacaré ficar abaixo de 60 ele será reprovado, se ficar entre 60 e 100 estará aprovado! Simule notas de 0 a 100 para todos os bimestres.</p>
                               <div id="notasbimestrais">
-                                   <div>
+                                   <div class="espacos-notas">
                                         <label class="titulo-notas" for="">1° Bimestre</label>
                                         <input id="nota1" class="notas" type="number">
                                    </div>
-                                   <div>
+                                   <div class="espacos-notas">
                                         <label class="titulo-notas"for="">2° Bimestre</label>
                                         <input id="nota2" class="notas" type="number">
                                    </div>
-                                   <div>
+                                   <div class="espacos-notas">
                                         <label class="titulo-notas"for="">3° Bimestre</label>
                                         <input id="nota3" class="notas" type="number">
                                    </div>
-                                   <div>
+                                   <div class="espacos-notas">
                                         <label class="titulo-notas"for="">4° Bimestre</label>
                                         <input id="nota4" class="notas" type="number">
                                    </div>
